Improve Branding UI - Fix after adding literal string overlap on border - Fix Literal String button text

--- a/static/app.css
+++ b/static/app.css
@@ -289,7 +289,7 @@ td {
 
 .operatorsListContainer{
     padding-top: 10px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 td.resultQuery {
